--- a/templates/default/local_settings.py.erb
+++ b/templates/default/local_settings.py.erb
@@ -11,3 +11,12 @@ DATABASES = {
 SAM_API_KEY = ''
 
 SECRET_KEY = '<%= @secret_key %>'
+
+DEFAULT_FILE_STORAGE = 'storages.backends.s3boto.S3BotoStorage'
+STATICFILES_STORAGE = 'storages.backends.s3boto.S3BotoStorage'
+
+AWS_ACCESS_KEY_ID = '<%= @aws_access_key_id %>'
+AWS_QUERYSTRING_AUTH = False
+AWS_SECRET_ACCESS_KEY = '<%= @aws_secret_access_key %>'
+AWS_STORAGE_BUCKET_NAME = 'mirage.gsa.gov'
+
