--- a/templates/default/local_settings.py.erb
+++ b/templates/default/local_settings.py.erb
@@ -21,3 +21,16 @@ AWS_QUERYSTRING_AUTH = False
 AWS_SECRET_ACCESS_KEY = '<%= @aws_secret_access_key %>'
 AWS_STORAGE_BUCKET_NAME = 'mirage-gsa-gov'
 <% end %>
+
+from mirage.settings import ALLOWED_HOSTS
+
+import requests
+
+EC2_PRIVATE_IP = None
+try:
+    EC2_PRIVATE_IP = requests.get('http://169.254.169.254/latest/meta-data/local-ipv4', timeout = 0.01).text
+except requests.exceptions.RequestException:
+    pass
+
+if EC2_PRIVATE_IP:
+    ALLOWED_HOSTS.append(EC2_PRIVATE_IP)
