Restrict /api traffic; Add CORS header; Add API keys

--- a/templates/default/local_settings.py.erb
+++ b/templates/default/local_settings.py.erb
@@ -22,6 +22,9 @@ AWS_SECRET_ACCESS_KEY = '<%= @aws_secret_access_key %>'
 AWS_STORAGE_BUCKET_NAME = 'mirage-gsa-gov'
 <% end %>
 
+API_HOST = '<%= @api_host %>'
+API_KEY = '<%= @api_key %>'
+
 from mirage.settings import ALLOWED_HOSTS
 
 import requests
