--- a/templates/default/nginx.conf.erb
+++ b/templates/default/nginx.conf.erb
@@ -1,15 +1,30 @@
 server {
   listen 443;
 
+  location /api {
+    # Allow api.data.gov IPs
+    allow 54.208.160.112;
+    allow 54.208.160.151;
+    deny all;
+
+    add_header 'Access-Control-Allow-Origin' '*';
+
+    proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+    proxy_set_header Host $http_host;
+    proxy_redirect off;
+    proxy_pass http://localhost:8000;
+  }
+
   location /static {
     root <%= @working_dir %>;
   }
 
   location / {
-      proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
-      proxy_set_header Host $http_host;
-      proxy_redirect off;
-      proxy_pass http://localhost:8000;
+    add_header 'Access-Control-Allow-Origin' '*';
+    proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+    proxy_set_header Host $http_host;
+    proxy_redirect off;
+    proxy_pass http://localhost:8000;
   }
 
   error_page 500 502 503 504 <%= @working_dir %>/static/500.html;
