--- a/templates/default/nginx.conf.erb
+++ b/templates/default/nginx.conf.erb
@@ -9,6 +9,11 @@ server {
 
     add_header 'Access-Control-Allow-Origin' '*';
 
+
+    set_real_ip_from  10.0.0.0/16;
+    real_ip_header    X-Forwarded-For;
+    real_ip_recursive on;
+
     proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
     proxy_set_header Host $http_host;
     proxy_redirect off;
